--- a/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.scss
+++ b/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.scss
@@ -5,18 +5,18 @@
 }
 
 #scatterplot-reusable-wide-0 .chart-window {
-  --transform-factor-width: 1;
-  --transform-factor-width-offset: 0;
+  --layout-width-factor: 1;
+  --layout-width-offset-factor: 0;
 }
 
 
 #scatterplot-reusable-wide-1 .chart-window {
   --font-size-base: 1.5rem;
-  --transform-factor-width: 1.2;
-  --transform-factor-width-offset: 0;
+  --layout-width-factor: 1.2;
+  --layout-width-offset-factor: 0;
 }
 
 #scatterplot-reusable-wide-2 .chart-window {
-  --transform-factor-width: 1.4;
-  --transform-factor-width-offset: 0;
+  --layout-width-factor: 1.4;
+  --layout-width-offset-factor: 0;
 }
