--- a/src/examples/experimental/scatterplot-labels/scatterplot-labels.css
+++ b/src/examples/experimental/scatterplot-labels/scatterplot-labels.css
@@ -5,7 +5,10 @@
 }
 
 #scatterplot-reusable-wide-0 .chart-window {
-  --font-size-base: 1.5rem;
+  --font-size-element-label: 1rem;
+  --font-size-axis-label: 1rem;
+  --font-size-axis-title: 1.4rem;
+  --font-size-title: 1.7rem;
   --layout-width-factor: 1;
   --layout-width-offset-factor: 0;
 }
