--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -38,8 +38,8 @@ body {
 }
 @media (max-width: 50rem) {
   .chart {
-    grid-template: auto auto 1fr auto/auto 1fr auto;
-    grid-template-areas: "header  header  header" "legend legend legend" "axis-left draw-area draw-area" " . axis-bottom . ";
+    grid-template: auto auto 1fr/1fr;
+    grid-template-areas: "header" "legend" "padding-wrapper";
   }
   .legend {
     width: 100%;
