--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -19,7 +19,8 @@ body [data-style=categorical-2] {
 
 @media (width < 45rem) {
   .chart {
-    grid-template: "header header" "axis-left draw-area" 1fr ". axis-bottom" auto ". legend" auto/auto 1fr;
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
   }
   .legend .title {
     display: none;
