--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
@@ -13,12 +13,13 @@ body {
 
 @media (width < 45rem) {
   .chart {
-    grid-template:
-        'header header'
-        'axis-left draw-area' 1fr
-        '. axis-bottom' auto
-        '. legend' auto / auto 1fr;
+    grid-template: auto 1fr auto / 1fr;
+    grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
   }
+
 
   .legend .title {
     display: none;
