--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -16,8 +16,8 @@ footer {
 
 @media (max-width: 40rem) {
   .chart {
-    grid-template: auto auto 1fr auto/auto 1fr;
-    grid-template-areas: "header header" ". legend" "axis-left draw-area" ". axis-bottom";
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
   }
   .legend .items {
     flex-direction: row;
