--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
@@ -16,12 +16,11 @@ footer {
 
 @media (max-width: 40rem) {
   .chart {
-    grid-template: auto auto 1fr auto / auto 1fr;
+    grid-template: auto 1fr auto / 1fr;
     grid-template-areas:
-        'header header'
-        '. legend'
-        'axis-left draw-area'
-        '. axis-bottom';
+      'header'
+      'padding-wrapper'
+      'legend';
   }
 
   .legend .items {
