--- a/src/examples/experimental/scatterplot-labels/sold-cars-germany/sold-cars-germany.css
+++ b/src/examples/experimental/scatterplot-labels/sold-cars-germany/sold-cars-germany.css
@@ -18,8 +18,8 @@
 }
 @container style(--layout-width: 0) or style(--layout-width: 1) {
   .chart-window .chart {
-    grid-template: auto 1fr auto auto/auto 1fr auto;
-    grid-template-areas: "header  header  header" "axis-left draw-area draw-area" " . axis-bottom . " " legend legend .";
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
   }
   .chart-window .legend {
     width: 100%;
