--- a/src/examples/experimental/scatterplot-reusable/sold-cars-germany/sold-cars-germany.scss
+++ b/src/examples/experimental/scatterplot-reusable/sold-cars-germany/sold-cars-germany.scss
@@ -7,12 +7,11 @@
   //Legend To Bottom
   @container style(--layout-width: 0) or style(--layout-width: 1) or style(--layout-width: 2) {
     .chart {
-      grid-template: auto 1fr auto auto / auto 1fr auto;
+      grid-template: auto 1fr auto / 1fr;
       grid-template-areas:
-          'header  header  header'
-          'axis-left draw-area draw-area'
-          ' . axis-bottom . '
-          ' legend legend .';
+      'header'
+      'padding-wrapper'
+      'legend';
     }
 
     .legend {
