--- a/src/examples/linecharts/linechart/linechart.scss
+++ b/src/examples/linecharts/linechart/linechart.scss
@@ -23,14 +23,9 @@ body {
 @media (max-width: 40rem) {
   .chart {
     padding: 1rem 3rem 0 3rem;
-  }
-
-  .chart .header .subtitle {
-    display: none;
-  }
-
-  .axis {
-    display: none !important;
+    .axis > * {
+      display: none !important;
+    }
   }
 
   .point:first-of-type,
