--- a/src/scss/chart/chart.scss
+++ b/src/scss/chart/chart.scss
@@ -1,3 +1,23 @@
+.chart-window {
+  display: grid;
+  position: relative;
+  grid-template: min-content 1fr / 1fr;
+  grid-template-areas:
+    'toolbar'
+    'chart';
+  width: 100%;
+  height: 100%;
+  font-family: sans-serif;
+}
+
+.chart {
+  display: grid;
+  grid-template: auto 1fr / 1fr;
+    grid-template-areas:
+    'header'
+    'padding-wrapper';
+}
+
 .chart .header {
   grid-area: header;
   display: grid;
@@ -17,15 +37,4 @@
   }
 }
 
-.chart-window {
-  display: grid;
-  position: relative;
-  grid-template: min-content 1fr / 1fr;
-  grid-template-areas:
-    'toolbar'
-    'chart';
-  width: 100%;
-  height: 100%;
-  font-family: sans-serif;
 
-}
