--- a/src/scss/chart/layout.scss
+++ b/src/scss/chart/layout.scss
@@ -1,23 +1,3 @@
-.layout {
-  --fit-width: false;
-  --fit-height: false;
-  pointer-events: none;
-}
-
-.draw-area {
-  grid-area: draw-area;
-  display: grid;
-  overflow: visible;
-}
-
-.draw-area > * {
-  grid-area: 1 / 1;
-}
-
-.draw-area .background {
-  opacity: 0;
-}
-
 .layouter {
   display: grid;
   position: relative;
@@ -33,6 +13,23 @@
   be set to 0 to not apply them twice (1x by layouter, 1x by browser) */
   padding: 0;
   margin: 0;
+}
+
+.layout {
+  --fit-width: false;
+  --fit-height: false;
+  pointer-events: none;
+}
+
+.draw-area {
+  display: grid;
+}
+.draw-area > * { //.draw-area
+  grid-area: 1 / 1;
+}
+
+.draw-area .background { //.draw-area
+  opacity: 0;
 }
 
 .chart-window .layouter {
