--- a/src/examples/experimental/scatterplot-labels/scatterplot-labels.scss
+++ b/src/examples/experimental/scatterplot-labels/scatterplot-labels.scss
@@ -4,7 +4,7 @@
   min-height: 25rem;
 }
 
-#scatterplot-reusable-wide-0 .chart-window {
+#scatterplot-reusable-wide-0 .window-rv {
   //--font-size-base: 1.5rem;
   //--font-size-legend-label: 1.5rem;
   --font-size-element-label: 1rem;
