--- a/src/examples/experimental/scatterplot-reusable/sold-cars-germany/sold-cars-germany.scss
+++ b/src/examples/experimental/scatterplot-reusable/sold-cars-germany/sold-cars-germany.scss
@@ -2,7 +2,7 @@
   width: 100%;
 }
 
-.chart-window {
+.window-rv {
   container-type: inline-size;
   //Legend To Bottom
   @container style(--layout-width: 0) or style(--layout-width: 1) or style(--layout-width: 2) {
