Finish Implementing render structure Add Superclass for Charts which contain Series Bring Parcoord chart to point where only keys are missing

--- a/src/examples/experimental/parcoord/parcoord.css
+++ b/src/examples/experimental/parcoord/parcoord.css
@@ -3,6 +3,9 @@
   height: 75vh;
   min-height: 25rem;
 }
+#chart .padding-wrapper {
+  padding-right: 4rem;
+}
 
 body {
   background-color: floralwhite;
