--- a/src/scss/axes.scss
+++ b/src/scss/axes.scss
@@ -4,8 +4,14 @@
   }
 
   .axis-left {
+    display: grid;
     grid-area: axis-left;
-    grid-template-areas: 'title subtitle ticks';
+    grid-template-areas: 'title-wrapper ticks';
+    .title-wrapper {
+      display: grid;
+      grid-area: title-wrapper;
+      grid-template-areas: 'title subtitle';
+    }
     .ticks-transform {
       margin-left: 0.5em;
     }
