--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -7,6 +7,9 @@ body {
   height: 75vh;
   min-height: 25rem;
 }
+#chart .padding-wrapper {
+  padding-right: 1rem;
+}
 #chart .series-label .label {
   display: none;
 }
