--- a/src/scss/chart/chart-parcoord.scss
+++ b/src/scss/chart/chart-parcoord.scss
@@ -11,19 +11,23 @@
     }
   }
   .axis.axis-sequence {
-    .title-wrapper {
+    position: relative;
+    div.title-wrapper {
       position: absolute;
-      translate: 0 -10px;
+      bottom: 100%;
       .subtitle {
         translate: 0 -3px;
+        //margin-top: -3px;
       }
+    }
+    .title-wrapper {
+      --fit-height: true;
       .title, .subtitle {
-        display: block;
         --fit-height: true;
         --fit-width: true;
         text {
           text-anchor: middle;
-          dominant-baseline: auto;
+          dominant-baseline: hanging;
         }
       }
     }
