Add Possibility to pass own linear scale for stacked bar charts Convert Standard Scatterplot to work with new API

--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
@@ -22,6 +22,9 @@ footer {
       'padding-wrapper'
       'legend';
   }
+  .padding-wrapper {
+    padding-right: 1rem;
+  }
 
   .legend .items {
     flex-direction: row;
