--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -19,6 +19,9 @@ footer {
     grid-template: auto 1fr auto/1fr;
     grid-template-areas: "header" "padding-wrapper" "legend";
   }
+  .padding-wrapper {
+    padding-right: 1rem;
+  }
   .legend .items {
     flex-direction: row;
     justify-content: space-evenly;
