--- a/src/examples/article/charts/electric-power-consumption/electric-power-consumption.scss
+++ b/src/examples/article/charts/electric-power-consumption/electric-power-consumption.scss
@@ -1,6 +1,7 @@
-#electric-power-consumption {
+#electric-power-consumption-chart {
   //display: none;
   container-type: inline-size;
+  .layouter {width: 100%}
   .point, .axis-x .tick, .axis-y .tick, .series-label .label {
     display: none;
   }
@@ -8,38 +9,32 @@
     display: block;
   }
 
-  @container (min-width: 41.25rem) {
-    width: 100%;
-    .chart {
-      grid-template: auto 1fr auto / auto 1fr auto;
-      grid-template-areas:
-                      'header  header    header'
-                      'axis-left draw-area   legend'
-                      '.     axis-bottom .   ';
-    }
-  }
-
   @container (max-width: 41.25rem) {
     .chart {
-      grid-template: auto auto 1fr auto / auto 1fr;
-      grid-template-areas: 'header  header' 'legend legend' 'axis-left draw-area' ' . axis-bottom';
+      grid-template: auto auto 1fr / 1fr;
+      grid-template-areas:
+      'header'
+      'legend'
+      'padding-wrapper';
     }
     .legend-item {
       margin-top: 1rem;
     }
     .legend {
-      width: 100%;
+      margin: 0;
       margin-bottom: 1rem;
-      margin-left: 0.5rem;
     }
     .legend .items {
-      flex-direction: row;
       width: 100%;
+      flex-direction: row;
       justify-content: space-evenly;
     }
   }
 
   @container (max-width: 23.75rem) {
+    .padding-wrapper {
+      grid-template: 1fr / 1fr;
+    }
     .point, .axis {
       display: none;
     }
