--- a/src/examples/article/charts/market-shares/market-shares.css
+++ b/src/examples/article/charts/market-shares/market-shares.css
@@ -1,42 +1,23 @@
 #market-shares-chart {
   container-type: inline-size;
 }
-@container (min-width: 36.25rem) {
-  #market-shares-chart .chart {
-    grid-template: auto 1fr auto/auto 1fr auto;
-    grid-template-areas: "header  header    header" "axis-left draw-area   legend" ".     axis-bottom .   ";
-  }
-  #market-shares-chart .legend {
-    align-items: center;
-  }
-  #market-shares-chart .legend .items {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-  }
-}
 @container (max-width: 36.25rem) {
   #market-shares-chart {
     width: 100%;
   }
   #market-shares-chart .chart {
-    width: 100%;
-    grid-template: auto auto 1fr auto/auto 1fr;
-    grid-template-areas: "header  header" "legend legend" "axis-left draw-area" " . axis-bottom";
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
+  }
+  #market-shares-chart .padding-wrapper {
+    padding-right: 1rem;
   }
   #market-shares-chart .legend .items {
-    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
   }
-}
-#market-shares-chart svg.chart .axis-bottom {
-  container-type: inline-size;
-}
-@container (max-width: 50rem) {
-  #market-shares-chart svg.chart .axis-bottom {
-    fill: red;
-    background: red;
+  #market-shares-chart .axis-y .tick:nth-of-type(2n) {
+    display: none;
   }
 }
