--- a/src/examples/article/charts/sold-cars-germany/sold-cars-germany.scss
+++ b/src/examples/article/charts/sold-cars-germany/sold-cars-germany.scss
@@ -1,18 +1,17 @@
-#sold-cars-germany {
+#sold-cars-germany-chart {
   width: 100%;
 }
 
-#sold-cars-germany {
+#sold-cars-germany-chart {
   container-type: inline-size;
   //Legend To Bottom
   @container (width < 30rem) {
     .chart {
-      grid-template: auto 1fr auto auto / auto 1fr auto;
+      grid-template: auto 1fr auto / 1fr;
       grid-template-areas:
-          'header  header  header'
-          'axis-left draw-area draw-area'
-          ' . axis-bottom . '
-          ' legend legend .';
+      'header'
+      'padding-wrapper'
+      'legend';
     }
 
     .legend {
