--- a/src/examples/article/styles.css
+++ b/src/examples/article/styles.css
@@ -19,7 +19,7 @@ h1 {
 
 .grid-article {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1fr));
   max-width: 87.5rem;
   margin: 0 auto;
   grid-gap: 0.063rem;
