--- a/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.css
+++ b/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.css
@@ -1,6 +1,7 @@
 .scatterplot-reusable {
-  width: 100%;
-  height: 50vh;
+  width: 90%;
+  margin: 2rem auto;
+  height: 30vh;
   min-height: 25rem;
 }
 
