--- a/src/examples-dependencies/styles/respvis.css
+++ b/src/examples-dependencies/styles/respvis.css
@@ -492,7 +492,7 @@ path.line.highlight {
   dominant-baseline: middle;
 }
 
-.window-rv {
+.window-rv, svg.chart {
   --root-size: 1rem;
   --font-size-base: calc(1 * var(--root-size));
   --font-size-title: calc(1.5 * var(--font-size-base));
