--- a/src/scss/chart/toolbar.scss
+++ b/src/scss/chart/toolbar.scss
@@ -4,8 +4,8 @@
   }
   .toolbar {
     grid-area: toolbar;
-    //display: none;
-    display: flex; //TODO: change this on check in!!!
+    display: none;
+    //display: flex; //comment out when testing
     align-items: center;
     flex-direction: row;
     width: 100%;
@@ -28,6 +28,8 @@
     dialog {
       left: 0;
       width: 100%;
+      max-height: 50vh;
+      overflow-y: scroll;
       margin: 0;
       margin-top: 1rem;
       opacity: 0;
@@ -40,6 +42,7 @@
         opacity: 1;
         translate: 0 0;
       }
+      &.dialog--filter { width: min-content }
       > .item + .item { margin-top: 0.5em }
     }
 
@@ -57,10 +60,15 @@
       &:hover { filter: brightness(80%); }
     }
 
+    .collapsable-opener {
+      cursor: pointer;
+    }
+
     .item {
       label {
         display: flex;
         align-items: center;
+        cursor: pointer;
       }
       > label + label { margin-top: 0.5em }
       input {
@@ -68,8 +76,16 @@
       }
     }
   }
-  .toolbar-download-tool {
 
+  .collapsable-wrapper {
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 500ms;
+    //padding: var(--space-sm);
+    &.expanded { grid-template-rows: 1fr; }
+    .collapsable {
+      overflow: hidden;
+    }
   }
 }
 
@@ -98,7 +114,6 @@
   padding: 0;
   position: absolute;
   top: -1px;
-  right: 100%;
   border: 1px solid rgb(118, 118, 118);
   display: none;
 }
@@ -128,7 +143,7 @@
   font-size: 1.25rem;
 }
 
-.menu-tools > .items {
-  right: 0;
+.menu > .items {
+  left: 0;
   top: 100%;
 }
